# LumenDB

./: .gitignore  CMakeLists.txt  Makefile  README.md  RUN.md  TECH.md  docker-compose.yml  go.mod  go.sum
LumenDB/: Dockerfile  (+8 more)
LumenDB/course/ch03_hnsw_theory/code/: CMakeLists.txt
LumenDB/course/ch04_mmap_storage/code/: CMakeLists.txt  mmap_array.cpp  mmap_array.h
LumenDB/python/: CMakeLists.txt  bindings.cpp
LumenDB/python/lumendb/: __init__.py  langchain.py
deepvector/: .clang-format  .env.example  API_REFERENCE.md  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INTERVIEW_QA.md  README.md  TUTORIAL.md  docker-compose.yml  requirements.txt
deepvector/.github/workflows/: ci.yml
deepvector/agent/: __init__.py  config.py
deepvector/agent/embedding/: __init__.py  service.py
deepvector/agent/engine/: __init__.py  multi_round.py  query_planner.py  query_reformulator.py  result_evaluator.py  strategy.py
deepvector/agent/llm/: __init__.py  prompts.py  router.py  schemas.py
deepvector/agent/mcp/: __init__.py  server.py
deepvector/agent/server/: app.py  routes.py
deepvector/benchmarks/: CMakeLists.txt  bench_hnsw.cpp
deepvector/course/: 00_如何使用本教程_en.md  00_如何使用本教程_zh.md  FREE_RESOURCES_en.md  FREE_RESOURCES_zh.md  INTERVIEW_BANK.md  LEARNING_PATH.md  README.md  _CHAPTER_TEMPLATE.md
deepvector/course/ch01_overview/: 01_项目概览_en.md  01_项目概览_zh.md
deepvector/course/ch01_setup/: 01_环境搭建与编译_en.md  01_环境搭建与编译_zh.md
deepvector/course/ch02_setup/: 02_环境搭建与编译_en.md  02_环境搭建与编译_zh.md
deepvector/course/ch02_vectors_distance/: 02_向量与距离度量_en.md  02_向量与距离度量_zh.md
deepvector/course/ch02_vectors_distance/code/: CMakeLists.txt  distance.cpp  distance.h
deepvector/course/ch03_config/: 03_配置系统_en.md  03_配置系统_zh.md
deepvector/course/ch03_hnsw_theory/: 03_HNSW近似搜索_en.md  03_HNSW近似搜索_zh.md
deepvector/course/ch03_hnsw_theory/code/: hnsw.cpp  hnsw.h  main.cpp
deepvector/course/ch04_llm/: 04_LLM集成层_en.md  04_LLM集成层_zh.md
deepvector/course/ch04_mmap_storage/: 04_mmap零拷贝存储_en.md  04_mmap零拷贝存储_zh.md
deepvector/course/ch04_mmap_storage/code/: main.cpp
deepvector/course/ch05_embedding/: 05_嵌入服务_en.md  05_嵌入服务_zh.md
deepvector/course/ch05_lsm_tree/: 05_LSM-Tree存储引擎_en.md  05_LSM-Tree存储引擎_zh.md
deepvector/course/ch05_lsm_tree/code/: bloom.h  skiplist.h
deepvector/course/ch06_metadata_filter/: 06_元数据过滤搜索_en.md  06_元数据过滤搜索_zh.md
deepvector/course/ch06_metadata_filter/code/: CMakeLists.txt  filter.h  main.cpp
deepvector/course/ch06_strategy/: 06_检索策略_en.md  06_检索策略_zh.md
deepvector/course/ch07_multi_round/: 07_多轮检索_en.md  07_多轮检索_zh.md
deepvector/course/ch07_quantization/: 07_向量量化压缩_en.md  07_向量量化压缩_zh.md
deepvector/course/ch07_quantization/code/: CMakeLists.txt  main.cpp  pq.cpp  pq.h
deepvector/course/ch08_cpp_patterns/: 08_CPP设计模式_en.md  08_CPP设计模式_zh.md
deepvector/course/ch08_cpp_patterns/code/: CMakeLists.txt  pimpl.cpp  thread_pool.cpp  type_erasure.h
deepvector/course/ch08_mcp/: 08_MCP服务器_en.md  08_MCP服务器_zh.md
deepvector/course/ch09_python_bindings/: 09_Python绑定_en.md  09_Python绑定_zh.md
deepvector/course/ch09_python_bindings/code/: CMakeLists.txt  VectorStorage.cpp  bindings.cpp  demo.py  setup.py
deepvector/course/ch09_server/: 09_HTTP服务器_en.md  09_HTTP服务器_zh.md
deepvector/course/ch10_cpp_enhance/: 10_C++增强_en.md  10_C++增强_zh.md
deepvector/course/ch10_http_server/: 10_HTTP服务器设计_en.md  10_HTTP服务器设计_zh.md
deepvector/course/ch10_http_server/code/: CMakeLists.txt  main.cpp  server.h
deepvector/course/ch11_coroutines/: 11_CPP20协程_en.md  11_CPP20协程_zh.md
deepvector/course/ch11_coroutines/code/: CMakeLists.txt  generator.h  main.cpp  task.h
deepvector/course/ch11_docker/: 11_Docker部署_en.md  11_Docker部署_zh.md
deepvector/course/ch12_production/: 12_生产部署_en.md  12_生产部署_zh.md
deepvector/course/ch12_testing/: 12_测试与质量_en.md  12_测试与质量_zh.md
deepvector/course/ch13_capstone/: 13_终极项目_en.md  13_终极项目_zh.md
deepvector/course/prerequisites/: 01_构建环境配置_zh.md  02_Docker容器化_en.md  02_Docker容器化_zh.md  02_Python环境_en.md  03_Docker容器化_en.md  03_Docker容器化_zh.md  03_Python环境_en.md  03_Python环境_zh.md  05_向量距离度量_en.md  05_向量距离度量_zh.md  05_距离度量_en.md  05_距离度量_zh.md  06_SIMD与硬件优化_en.md
deepvector/docs/: AGENTICDB.md  OPERATIONS.md  PRODUCTION_QA.md  openapi.yaml
deepvector/examples/: demo_agentic_search.py  demo_mcp_client.py
deepvector/include/dv/: collection.h  deepvector.h  filter.h  types.h
deepvector/python/: CMakeLists.txt  bindings.cpp
deepvector/python/deepvector/: __init__.py  langchain.py
deepvector/scripts/: benchmark.py  demo_data.py  start.sh
deepvector/src/: collection.cpp  filter.cpp
deepvector/src/index/: hnsw.cpp
deepvector/src/quantize/: pq.cpp  scalar.cpp
deepvector/src/server/: collection_registry.cpp  main.cpp  server.cpp
deepvector/src/storage/: document_store.cpp  vector_store.cpp
deepvector/tests/: CMakeLists.txt  test_collection.cpp  test_collection_filter.cpp  test_distance.cpp  test_filter.cpp  test_hnsw.cpp  test_quantize.cpp
deepvector/tests/agent/: test_llm_router.py  test_query_planner.py  test_query_reformulator.py  test_result_evaluator.py
minikv/: CMakeLists.txt
minikv/cmake/: FetchCompression.cmake
minikv/include/minikv/: options.h
minikv/src/core/: block.cpp  block.h  compression.cpp  compression.h  db_impl.cpp  db_impl.h  internal_key.cpp  internal_key.h  manifest.cpp  manifest.h  memtable.cpp  memtable.h  memtable_iterator.cpp  memtable_iterator.h  merging_iterator.cpp  merging_iterator.h  skip_list.h  sstable_builder.cpp  sstable_builder.h  sstable_iterator.cpp  sstable_iterator.h  sstable_reader.cpp  sstable_reader.h  version.cpp  version.h
minikv/src/utils/: coding.h
minikv/tests/: CMakeLists.txt  test_compression.cpp  test_internal_key.cpp  test_manifest.cpp  test_skip_list.cpp  test_sstable_compression.cpp
skynet/: CMakeLists.txt
tests/course/: CMakeLists.txt  test_bloom_filter_math.cpp  test_lru_handwrite.cpp  test_murmurhash.cpp  test_skiplist_handwrite.cpp  test_spsc_queue_handwrite.cpp  test_thread_pool_handwrite.cpp  test_unique_ptr_handwrite.cpp
(+238 files in other folders)
